--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -140,7 +140,8 @@
       overflow: visible;
     }
     .imageContainer {
-      padding-top: 250px;
+      // padding-top: 250px;
+      padding-top: 130px;
       justify-content: flex-start;
     }
     .logo {
