--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -9,4 +9,6 @@
 
 .layoutMarginTop {
   margin-top: 60px;
+  margin-top: 0;
+  padding-bottom: 220px;
 }
